A1-03 완료